--- a/ai-tools/cursor.mdx
+++ b/ai-tools/cursor.mdx
@@ -233,16 +233,16 @@ Example of accordion groups:
 
 Example of cards and card groups:
 
-<Card title="Getting started guide" icon="rocket" href="/quickstart">
+<Card color="#0080FF" title="Getting started guide" icon="rocket" href="/quickstart">
 Complete walkthrough from installation to your first API call in under 10 minutes.
 </Card>
 
 <CardGroup cols={2}>
-<Card title="Authentication" icon="key" href="/auth">
+<Card color="#0080FF" title="Authentication" icon="key" href="/auth">
   Learn how to authenticate requests using API keys or JWT tokens.
 </Card>
 
-<Card title="Rate limiting" icon="clock" href="/rate-limits">
+<Card color="#0080FF" title="Rate limiting" icon="clock" href="/rate-limits">
   Understand rate limits and best practices for high-volume usage.
 </Card>
 </CardGroup>
