--- a/ai-tools/windsurf.mdx
+++ b/ai-tools/windsurf.mdx
@@ -75,7 +75,7 @@ description: "Concise description for SEO and navigation"
 
 - Use `<Tabs>` for platform-specific content
 - Use `<Accordion>` for progressive disclosure
-- Use `<Card>` and `<CardGroup>` for highlighting content
+- Use `<Card color="#0080FF">` and `<Card color="#0080FF"Group>` for highlighting content
 - Wrap images in `<Frame>` components with descriptive alt text
 
 ## API documentation requirements
