--- a/api-reference/virtual-account/create-wallet.mdx
+++ b/api-reference/virtual-account/create-wallet.mdx
@@ -47,9 +47,9 @@ const wallet = await client.wallets.createFiatWallet({
 ```
 
 ```python
-from fossapay import Fossapay
+from fossapay import FossaPay
 
-client = Fossapay('fp_live_sk_xxxxxxxx')
+client = FossaPay('fp_live_sk_xxxxxxxx')
 
 wallet = client.wallets.create_fiat_wallet(
     customerId='cus_123456789',
