--- a/guides/collections.mdx
+++ b/guides/collections.mdx
@@ -1,11 +1,11 @@
 ---
 title: Collections Guide
-description: 'Complete guide to accepting payments with Fossapay'
+description: 'Complete guide to accepting payments with FossaPay'
 ---
 
 ## Overview
 
-This guide walks you through accepting payments using Fossapay's Fiat Wallet API. You'll learn how to create fiat wallets, receive payments, handle webhooks, and reconcile transactions.
+This guide walks you through accepting payments using FossaPay's Fiat Wallet API. You'll learn how to create fiat wallets, receive payments, handle webhooks, and reconcile transactions.
 
 ## Quick Start
 
@@ -300,7 +300,7 @@ async function dailyReconciliation() {
   const tomorrow = new Date(today);
   tomorrow.setDate(tomorrow.getDate() + 1);
 
-  // Get all transactions from Fossapay
+  // Get all transactions from FossaPay
   const fossapayTransactions = await client.transactions.list({
     start_date: today.toISOString(),
     end_date: tomorrow.toISOString(),
@@ -470,16 +470,16 @@ curl -X POST https://api-staging.fossapay.com/api/v1/sandbox/simulate-payment \
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="Create Fiat Wallet API" icon="code" href="/api-reference/virtual-account/create-wallet">
+  <Card color="#0080FF" title="Create Fiat Wallet API" icon="code" href="/api-reference/virtual-account/create-wallet">
     API reference for creating fiat wallets
   </Card>
-  <Card title="Webhooks Guide" icon="webhook" href="/concepts/webhooks">
+  <Card color="#0080FF" title="Webhooks Guide" icon="webhook" href="/concepts/webhooks">
     Learn more about handling webhooks
   </Card>
-  <Card title="Reconciliation Guide" icon="book" href="/guides/reconciliation">
+  <Card color="#0080FF" title="Reconciliation Guide" icon="book" href="/guides/reconciliation">
     Best practices for reconciliation
   </Card>
-  <Card title="Wallets Concept" icon="building-columns" href="/concepts/wallets">
+  <Card color="#0080FF" title="Wallets Concept" icon="building-columns" href="/concepts/wallets">
     Understand wallets in depth
   </Card>
 </CardGroup>
