--- a/guides/kyc-compliance.mdx
+++ b/guides/kyc-compliance.mdx
@@ -1,32 +1,32 @@
 ---
 title: KYC & Compliance
-description: 'Understanding KYC requirements and compliance in Fossapay'
+description: 'Understanding KYC requirements and compliance in FossaPay'
 ---
 
 ## Overview
 
-Fossapay provides KYC verification through integration with Nigerian government systems. This guide covers the available KYC verification methods and best practices for compliance.
+FossaPay provides KYC verification through integration with Nigerian government systems. This guide covers the available KYC verification methods and best practices for compliance.
 
 ## Why KYC Matters
 
 <CardGroup cols={2}>
-  <Card title="Regulatory Compliance" icon="scale-balanced">
+  <Card color="#0080FF" title="Regulatory Compliance" icon="scale-balanced">
     Meet CBN and NDPR requirements
   </Card>
-  <Card title="Fraud Prevention" icon="shield">
+  <Card color="#0080FF" title="Fraud Prevention" icon="shield">
     Prevent identity theft and financial fraud
   </Card>
-  <Card title="Risk Management" icon="triangle-exclamation">
+  <Card color="#0080FF" title="Risk Management" icon="triangle-exclamation">
     Identify and manage high-risk customers
   </Card>
-  <Card title="Customer Trust" icon="handshake">
+  <Card color="#0080FF" title="Customer Trust" icon="handshake">
     Build trust through verified identities
   </Card>
 </CardGroup>
 
 ## Available KYC Verifications
 
-Fossapay currently supports three types of KYC verification:
+FossaPay currently supports three types of KYC verification:
 
 ### BVN Verification
 
@@ -165,16 +165,16 @@ Handle verification failures appropriately:
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="Create Customer" icon="code" href="/api-reference/customers/create-customer">
+  <Card color="#0080FF" title="Create Customer" icon="code" href="/api-reference/customers/create-customer">
     Create customers before KYC verification
   </Card>
-  <Card title="BVN Verification API" icon="code" href="/api-reference/customers/kyc/verify-bvn">
+  <Card color="#0080FF" title="BVN Verification API" icon="code" href="/api-reference/customers/kyc/verify-bvn">
     Verify customer BVN
   </Card>
-  <Card title="NIN Verification API" icon="code" href="/api-reference/customers/kyc/verify-nin">
+  <Card color="#0080FF" title="NIN Verification API" icon="code" href="/api-reference/customers/kyc/verify-nin">
     Verify customer NIN
   </Card>
-  <Card title="Address Verification API" icon="code" href="/api-reference/customers/kyc/verify-address">
+  <Card color="#0080FF" title="Address Verification API" icon="code" href="/api-reference/customers/kyc/verify-address">
     Verify customer address
   </Card>
 </CardGroup>
