--- a/guides/payouts.mdx
+++ b/guides/payouts.mdx
@@ -1,15 +1,15 @@
 ---
 title: Payouts Guide
-description: 'Complete guide to sending money with Fossapay'
+description: 'Complete guide to sending money with FossaPay'
 ---
 
 ## Overview
 
-Send money to any Nigerian bank account in seconds using Fossapay's Payouts API. This guide covers single payouts, bulk disbursements, and handling payout failures.
+Send money to any Nigerian bank account in seconds using FossaPay's Payouts API. This guide covers single payouts, bulk disbursements, and handling payout failures.
 
 ## Prerequisites
 
-- Sufficient balance in your Fossapay wallet or bank account
+- Sufficient balance in your FossaPay wallet or bank account
 - Verified business account
 - Live API keys (test keys for sandbox)
 
@@ -254,16 +254,16 @@ try {
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="Inter-Bank Transfer API" icon="code" href="/api-reference/fiat-transfers/inter-bank-transfer">
+  <Card color="#0080FF" title="Inter-Bank Transfer API" icon="code" href="/api-reference/fiat-transfers/inter-bank-transfer">
     API reference for transfers
   </Card>
-  <Card title="Bank Name Enquiry API" icon="code" href="/api-reference/fiat-transfers/bank-name-enquiry">
+  <Card color="#0080FF" title="Bank Name Enquiry API" icon="code" href="/api-reference/fiat-transfers/bank-name-enquiry">
     Validate account details
   </Card>
-  <Card title="Webhooks" icon="webhook" href="/concepts/webhooks">
+  <Card color="#0080FF" title="Webhooks" icon="webhook" href="/concepts/webhooks">
     Handle transfer webhooks
   </Card>
-  <Card title="Wallets" icon="wallet" href="/concepts/wallets">
+  <Card color="#0080FF" title="Wallets" icon="wallet" href="/concepts/wallets">
     Fund transfers from wallets
   </Card>
 </CardGroup>
