--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,57 +1,48 @@
 ---
 title: Introduction
-description: 'Welcome to Fossapay - Banking Infrastructure for Neobanks and Fintechs in Africa'
 ---
 
-<img
-  className="block dark:hidden"
-  src="/logo/light.svg"
-  alt="Fossapay Logo"
-  width="200"
-/>
-<img
-  className="hidden dark:block"
-  src="/logo/dark.svg"
-  alt="Fossapay Logo"
-  width="200"
-/>
+Welcome to the FossaPay API documentation.
 
-## Welcome to Fossapay
+FossaPay is a payment infrastructure built for neobanks, fintechs, and businesses that need to move money quickly and safely. Through a single API, you can issue virtual accounts, manage wallets, automate payouts, and settle funds in fiat or stablecoins.
 
-Fossapay is the banking infrastructure platform that enables neobanks and fintechs across Africa to launch and scale financial products quickly and compliantly.
+This documentation explains how FossaPay works, what you can build with it, and how to get started from your first API call to live transactions.
 
-### What is Fossapay?
+### What is FossaPay?
 
-Fossapay provides a complete banking infrastructure through a single API, allowing you to:
+FossaPay is a unified payment and wallet infrastructure that helps products launch and scale faster.
 
-- **Create Fiat Wallets** - Create and assign fiat wallets on demand for your customers
-- **Manage Payments** - Accept collections and send payouts seamlessly
-- **Instant Settlements** - Settle transactions in real-time in fiat or stablecoins
-- **Build Wallets** - Create customer wallets with multi-currency support
-- **Stay Compliant** - KYC-ready, PCI-DSS compliant infrastructure
+With FossaPay, you can:
+- Create and assign fiat virtual accounts on demand
+- Accept bank transfers and wallet payments
+- Hold and manage balances in NGN and stablecoins
+- Automate payouts and settlements
+- Track transactions in real time
+- Receive instant webhook events
+- Run KYC and compliance flows
 
-### Why Choose Fossapay?
+### Why Choose FossaPay?
 
 <CardGroup cols={2}>
-  <Card
-    title="Launch in 2 Weeks"
+  <Card color="#0080FF"
+    title="Launch in 2 months"
     icon="rocket"
   >
-    Go live in weeks, not months. No heavy setup or compliance headaches.
+    Go live very fast. No heavy setup or compliance headaches.
   </Card>
-  <Card
+  <Card color="#0080FF"
     title="Single API"
     icon="code"
   >
     Everything you need through one unified API - from collections to payouts.
   </Card>
-  <Card
+  <Card color="#0080FF"
     title="Real-time Operations"
     icon="bolt"
   >
     Instant webhooks, real-time reconciliation, and immediate settlements.
   </Card>
-  <Card
+  <Card color="#0080FF"
     title="Bank-grade Security"
     icon="shield-check"
   >
@@ -61,7 +52,7 @@ Fossapay provides a complete banking infrastructure through a single API, allowi
 
 ### Built for Neobanks and Fintechs
 
-Whether you're building a digital bank, a payment platform, or a fintech product, Fossapay provides the foundation you need:
+Whether you're building a digital bank, a payment platform, or a fintech product, FossaPay provides the foundation you need:
 
 - **Neobanks** - Launch your own branded banking platform
 - **Lending Platforms** - Manage disbursements and collections
@@ -72,21 +63,21 @@ Whether you're building a digital bank, a payment platform, or a fintech product
 ### Getting Started
 
 <CardGroup cols={2}>
-  <Card
+  <Card color="#0080FF"
     title="Quickstart"
     icon="play"
     href="/quickstart"
   >
     Get up and running in minutes with our quickstart guide
   </Card>
-  <Card
+  <Card color="#0080FF"
     title="API Reference"
     icon="code"
-    href="/api-reference/virtual-account/create-wallet"
+    href="/api-reference"
   >
     Explore our comprehensive API documentation
   </Card>
-  <Card
+  <Card color="#0080FF"
     title="White-Label Solution"
     icon="building"
     href="/white-label/overview"
