--- a/white-label/overview.mdx
+++ b/white-label/overview.mdx
@@ -1,29 +1,29 @@
 ---
 title: 'White-Label Overview'
-description: 'Launch your own branded neobank with Fossapay'
+description: 'Launch your own branded neobank with FossaPay'
 ---
 
-## Run Your Own Neobank
+## Launch Your Own Neobank
 
-Fossapay's white-label solution enables you to launch a fully-branded neobank or fintech platform using our banking infrastructure. Focus on your customers and growth while we handle the backend, compliance, and banking operations.
+FossaPay's white-label solution enables you to launch a fully-branded neobank or fintech platform using our banking infrastructure. Focus on your customers and growth while we handle the backend, compliance, and banking operations.
 
 <Info>
-  **Launch Timeline:** Go live in 2 weeks with our white-label solution
+  **Launch Timeline:** Go live in 2 months with our white-label solution
 </Info>
 
 ## What's Included
 
 <CardGroup cols={2}>
-  <Card title="Virtual Accounts & Wallets" icon="wallet">
+  <Card color="#0080FF" title="Virtual Accounts & Wallets" icon="wallet">
     Complete banking infrastructure ready to use
   </Card>
-  <Card title="KYC & Compliance" icon="shield-check">
+  <Card color="#0080FF" title="KYC & Compliance" icon="shield-check">
     Built-in KYC flows and regulatory compliance
   </Card>
-  <Card title="Payouts & Collections" icon="money-bill-transfer">
+  <Card color="#0080FF" title="Payouts & Collections" icon="money-bill-transfer">
     Full payment processing capabilities
   </Card>
-  <Card title="Developer Support" icon="code">
+  <Card color="#0080FF" title="Developer Support" icon="code">
     Dedicated technical support and sandbox access
   </Card>
 </CardGroup>
@@ -106,32 +106,11 @@ Bridge cryptocurrency and traditional banking:
 - CBN regulatory compliance
 - Fraud detection
 
-### API & Integration
-- RESTful APIs
-- Webhook notifications
-- SDKs (Node.js, Python, PHP)
-- Sandbox environment
-- Comprehensive documentation
 
 ### Operations & Support
 - 24/7 technical support
 - Dedicated account manager
-- Developer community
 - Regular platform updates
-
-## Pricing Models
-
-### Revenue Share
-Share transaction fees with Fossapay based on volume:
-- **Starter**: 70/30 split (You keep 70%)
-- **Growth**: 80/20 split
-- **Enterprise**: Custom rates
-
-### Platform Fee
-Fixed monthly platform fee + lower transaction costs:
-- **Basic**: ₦500,000/month
-- **Professional**: ₦1,500,000/month
-- **Enterprise**: Custom pricing
 
 <Note>
   Contact our sales team for custom pricing based on your expected volume and requirements.
@@ -141,7 +120,7 @@ Fixed monthly platform fee + lower transaction costs:
 
 ```mermaid
 graph LR
-    A[Your App] --> B[Fossapay API]
+    A[Your App] --> B[FossaPay API]
     B --> C[Virtual Accounts]
     B --> D[Wallets]
     B --> E[Payments]
@@ -150,7 +129,7 @@ graph LR
     E --> G
 ```
 
-Your application integrates with Fossapay APIs, and we handle all banking operations, compliance, and settlements.
+Your application integrates with FossaPay APIs, and we handle all banking operations, compliance, and settlements.
 
 ## Getting Started
 
@@ -176,37 +155,10 @@ Your application integrates with Fossapay APIs, and we handle all banking operat
   </Step>
 </Steps>
 
-## Success Stories
-
-<AccordionGroup>
-  <Accordion title="Digital Bank - 100K Users in 6 Months">
-    A consumer neobank launched with Fossapay's white-label solution and acquired 100,000 users in their first 6 months, processing over ₦5 billion in transactions.
-  </Accordion>
-
-  <Accordion title="Freelancer Platform - Instant Payouts">
-    A gig economy platform integrated Fossapay to offer instant wallet-to-bank payouts, reducing payout time from 7 days to instant and improving freelancer retention by 40%.
-  </Accordion>
-
-  <Accordion title="Crypto Exchange - Fiat Gateway">
-    A cryptocurrency exchange used Fossapay to build NGN on/off ramps, enabling customers to buy crypto with naira transfers and sell crypto to their bank accounts.
-  </Accordion>
-</AccordionGroup>
-
-## Feature Comparison
-
-| Feature | DIY Banking License | Fossapay White-Label |
-|---------|---------------------|----------------------|
-| Time to Market | 12-24 months | 2 weeks |
-| Upfront Cost | ₦100M+ | ₦0 |
-| Banking License | Required | Not required |
-| Compliance Team | Build in-house | Included |
-| Infrastructure | Build & maintain | Fully managed |
-| API Integration | N/A | ✅ Simple REST API |
 
 ## Regulatory Benefits
 
-By using Fossapay's white-label solution:
-- ✅ No need for your own banking license
+By using FossaPay's white-label solution:
 - ✅ Leverage our regulatory approvals
 - ✅ Built-in KYC/AML compliance
 - ✅ Automated regulatory reporting
@@ -215,16 +167,16 @@ By using Fossapay's white-label solution:
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="Setup Guide" icon="rocket" href="/white-label/setup">
+  <Card color="#0080FF" title="Setup Guide" icon="rocket" href="/white-label/setup">
     Learn how to set up your white-label platform
   </Card>
-  <Card title="Customization" icon="palette" href="/white-label/customization">
+  <Card color="#0080FF" title="Customization" icon="palette" href="/white-label/customization">
     Customize your branding and features
   </Card>
-  <Card title="Contact Sales" icon="phone" href="mailto:sales@fossapay.com">
+  <Card color="#0080FF" title="Contact Sales" icon="phone" href="mailto:sales@fossapay.com">
     Schedule a consultation
   </Card>
-  <Card title="View Demo" icon="display" href="https://demo.fossapay.com">
+  <Card color="#0080FF" title="View Demo" icon="display" href="https://demo.fossapay.com">
     See a live demo
   </Card>
 </CardGroup>
@@ -233,11 +185,11 @@ By using Fossapay's white-label solution:
 
 <AccordionGroup>
   <Accordion title="Do I need a banking license?">
-    No, you don't need your own banking license. You operate under Fossapay's regulatory framework.
+    No, you don't need your own banking license. You operate under FossaPay's regulatory framework.
   </Accordion>
 
   <Accordion title="Can I set my own transaction fees?">
-    Yes, you can set your own fees and pricing for your customers. Fossapay charges you a wholesale rate.
+    Yes, you can set your own fees and pricing for your customers. FossaPay charges you a wholesale rate.
   </Accordion>
 
   <Accordion title="What currencies are supported?">
@@ -257,6 +209,6 @@ By using Fossapay's white-label solution:
 
 Ready to launch your neobank?
 
-- **Email**: sales@fossapay.com
-- **Phone**: +234 (0) 800 FOSSAPAY
-- **Schedule**: [Book a demo](https://calendly.com/fossapay/demo)
+- **Email**: product@fossapay.com
+- **Phone**: +2347088899861
+- **Schedule**: [Book a demo](https://calendly.com/codewithmide/new-meeting)
