--- a/api-reference/customers/get-all-customers.mdx
+++ b/api-reference/customers/get-all-customers.mdx
@@ -4,9 +4,6 @@ api: 'GET https://api-staging.fossapay.com/api/v1/customers'
 description: 'Retrieve a list of all customers'
 ---
 
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
-
 ## Overview
 
 Retrieve a list of all customer accounts in your system.
@@ -133,15 +130,15 @@ Retrieve a list of all customer accounts in your system.
 ## Example
 
 <Tabs>
-<TabItem value="curl" label="cURL">
+<Tab title="cURL">
 
 ```bash
 curl -X GET "https://api-staging.fossapay.com/api/v1/customers?sortOrder=desc&sortBy=createdAt&search=john&page=1&limit=10" \
   -H "x-api-key: YOUR_API_KEY"
 ```
 
-</TabItem>
-<TabItem value="nodejs" label="Node.js">
+</Tab>
+<Tab title="Node.js">
 
 ```javascript
 const response = await fetch('https://api-staging.fossapay.com/api/v1/customers?sortOrder=desc&sortBy=createdAt&search=john&page=1&limit=10', {
@@ -155,7 +152,7 @@ const customers = await response.json();
 console.log(customers);
 ```
 
-</TabItem>
+</Tab>
 </Tabs>
 
 ## Rate Limits
