--- a/api-reference/customers/index.mdx
+++ b/api-reference/customers/index.mdx
@@ -3,9 +3,6 @@ title: 'Customers API'
 description: 'Customer management endpoints'
 ---
 
-import Tabs from '@theme/Tabs';
-import TabItem from '@theme/TabItem';
-
 ## Overview
 
 The Customers API provides endpoints for managing third-party customer accounts, including creating new customers, retrieving customer information, and checking tier status.
@@ -21,7 +18,7 @@ All endpoints require API key authentication via the `x-api-key` header.
 Create a new customer account.
 
 <Tabs>
-<TabItem value="curl" label="cURL">
+<Tab title="cURL">
 
 ```bash
 curl -X POST https://api-staging.fossapay.com/api/v1/customers \
@@ -37,8 +34,8 @@ curl -X POST https://api-staging.fossapay.com/api/v1/customers \
   }'
 ```
 
-</TabItem>
-<TabItem value="nodejs" label="Node.js">
+</Tab>
+<Tab title="Node.js">
 
 ```javascript
 const response = await fetch('https://api-staging.fossapay.com/api/v1/customers', {
@@ -58,7 +55,7 @@ const response = await fetch('https://api-staging.fossapay.com/api/v1/customers'
 });
 ```
 
-</TabItem>
+</Tab>
 </Tabs>
 
 **Response (201 Created):**
@@ -80,14 +77,14 @@ const response = await fetch('https://api-staging.fossapay.com/api/v1/customers'
 Retrieve a list of all customers.
 
 <Tabs>
-<TabItem value="curl" label="cURL">
+<Tab title="cURL">
 
 ```bash
 curl -X GET https://api-staging.fossapay.com/api/v1/customers \
   -H "x-api-key: YOUR_API_KEY"
 ```
 
-</TabItem>
+</Tab>
 </Tabs>
 
 **Response (200 OK):**
@@ -111,14 +108,14 @@ curl -X GET https://api-staging.fossapay.com/api/v1/customers \
 Retrieve a specific customer by their ID.
 
 <Tabs>
-<TabItem value="curl" label="cURL">
+<Tab title="cURL">
 
 ```bash
 curl -X GET https://api-staging.fossapay.com/api/v1/customers/cust_123456789 \
   -H "x-api-key: YOUR_API_KEY"
 ```
 
-</TabItem>
+</Tab>
 </Tabs>
 
 **Response (200 OK):**
@@ -140,14 +137,14 @@ curl -X GET https://api-staging.fossapay.com/api/v1/customers/cust_123456789 \
 Retrieve the tier status and limits for a specific customer.
 
 <Tabs>
-<TabItem value="curl" label="cURL">
+<Tab title="cURL">
 
 ```bash
 curl -X GET https://api-staging.fossapay.com/api/v1/customers/cust_123456789/tier-status \
   -H "x-api-key: YOUR_API_KEY"
 ```
 
-</TabItem>
+</Tab>
 </Tabs>
 
 **Response (200 OK):**
@@ -214,7 +211,7 @@ The crypto wallet functionality provides endpoints for managing blockchain-based
 Create a new crypto wallet for a customer.
 
 <Tabs>
-<TabItem value="curl" label="cURL">
+<Tab title="cURL">
 
 ```bash
 curl -X POST https://api.fossapay.com/v1/wallets/crypto/create \
@@ -226,8 +223,8 @@ curl -X POST https://api.fossapay.com/v1/wallets/crypto/create \
   }'
 ```
 
-</TabItem>
-<TabItem value="nodejs" label="Node.js">
+</Tab>
+<Tab title="Node.js">
 
 ```javascript
 const response = await fetch('https://api.fossapay.com/v1/wallets/crypto/create', {
@@ -243,7 +240,7 @@ const response = await fetch('https://api.fossapay.com/v1/wallets/crypto/create'
 });
 ```
 
-</TabItem>
+</Tab>
 </Tabs>
 
 **Response (201 Created):**
@@ -265,14 +262,14 @@ const response = await fetch('https://api.fossapay.com/v1/wallets/crypto/create'
 Retrieve crypto wallet details by wallet ID.
 
 <Tabs>
-<TabItem value="curl" label="cURL">
+<Tab title="cURL">
 
 ```bash
 curl -X GET https://api.fossapay.com/v1/wallets/crypto/user:u3d \
   -H "x-api-key: YOUR_API_KEY"
 ```
 
-</TabItem>
+</Tab>
 </Tabs>
 
 **Response (200 OK):**
@@ -306,14 +303,14 @@ curl -X GET https://api.fossapay.com/v1/wallets/crypto/user:u3d \
 Retrieve crypto wallet details by wallet address.
 
 <Tabs>
-<TabItem value="curl" label="cURL">
+<Tab title="cURL">
 
 ```bash
 curl -X GET https://api.fossapay.com/v1/wallets/crypto/address/CcnysYh3Y1ZLqPxkazFyiTx76Upv12iP4sNGeHA2H4z2 \
   -H "x-api-key: YOUR_API_KEY"
 ```
 
-</TabItem>
+</Tab>
 </Tabs>
 
 **Response (200 OK):**
@@ -347,14 +344,14 @@ curl -X GET https://api.fossapay.com/v1/wallets/crypto/address/CcnysYh3Y1ZLqPxka
 Retrieve all transactions for a crypto wallet.
 
 <Tabs>
-<TabItem value="curl" label="cURL">
+<Tab title="cURL">
 
 ```bash
 curl -X GET "https://api.fossapay.com/v1/wallets/crypto/user:u3d/transactions?page=1&limit=10" \
   -H "x-api-key: YOUR_API_KEY"
 ```
 
-</TabItem>
+</Tab>
 </Tabs>
 
 **Response (200 OK):**
@@ -392,14 +389,14 @@ curl -X GET "https://api.fossapay.com/v1/wallets/crypto/user:u3d/transactions?pa
 Retrieve a single crypto wallet transaction by transaction ID.
 
 <Tabs>
-<TabItem value="curl" label="cURL">
+<Tab title="cURL">
 
 ```bash
 curl -X GET https://api.fossapay.com/v1/wallets/crypto/transactions/85503565-cb04-4ba7-abfb-b75193553086 \
   -H "x-api-key: YOUR_API_KEY"
 ```
 
-</TabItem>
+</Tab>
 </Tabs>
 
 **Response (200 OK):**
