--- a/index.mdx
+++ b/index.mdx
@@ -8,6 +8,7 @@ description: "Welcome to the new home for your documentation"
 Get your documentation site up and running in minutes.
 
 <Card
+  color="#0080FF"
   title="Start here"
   icon="rocket"
   href="/quickstart"
@@ -22,6 +23,7 @@ Design a docs site that looks great and empowers your users.
 
 <Columns cols={2}>
   <Card
+    color="#0080FF"
     title="Edit locally"
     icon="pen-to-square"
     href="/development"
@@ -29,20 +31,24 @@ Design a docs site that looks great and empowers your users.
     Edit your docs locally and preview them in real time.
   </Card>
   <Card
+    color="#0080FF"
     title="Customize your site"
     icon="palette"
     href="/essentials/settings"
   >
     Customize the design and colors of your site to match your brand.
   </Card>
-    <Card
+  <Card
+    color="#0080FF"
     title="Set up navigation"
     icon="map"
     href="/essentials/navigation"
   >
-    Organize your docs to help users find what they need and succeed with your product.
+    Organize your docs to help users find what they need and succeed with your
+    product.
   </Card>
   <Card
+    color="#0080FF"
     title="API documentation"
     icon="terminal"
     href="/api-reference/introduction"
@@ -57,6 +63,7 @@ Everything you need to create world-class documentation.
 
 <Columns cols={2}>
   <Card
+    color="#0080FF"
     title="Write with MDX"
     icon="pen-fancy"
     href="/essentials/markdown"
@@ -64,20 +71,18 @@ Everything you need to create world-class documentation.
     Use MDX to style your docs pages.
   </Card>
   <Card
+    color="#0080FF"
     title="Code samples"
     icon="code"
     href="/essentials/code"
   >
     Add sample code to demonstrate how to use your product.
   </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
+  <Card color="#0080FF" title="Images" icon="image" href="/essentials/images">
     Display images and other media.
   </Card>
   <Card
+    color="#0080FF"
     title="Reusable snippets"
     icon="recycle"
     href="/essentials/reusable-snippets"
@@ -89,6 +94,7 @@ Everything you need to create world-class documentation.
 ## Need inspiration?
 
 <Card
+  color="#0080FF"
   title="See complete examples"
   icon="stars"
   href="https://mintlify.com/customers"
